# Logic/EventModel/Storage/EventRepository.cs
@@ -1,7 +1,9 @@
 ﻿using System.Collections.Generic;
+using System.Linq;
 using LiteDB;
 using maxbl4.Race.Logic.EventModel.Storage.Identifier;
 using maxbl4.Race.Logic.EventStorage.Storage.Model;
+using maxbl4.Race.Logic.EventStorage.Storage.Traits;
 using maxbl4.Race.Logic.ServiceBase;
 using maxbl4.Race.Logic.UpstreamData;
 
@@ -17,19 +19,23 @@ namespace maxbl4.Race.Logic.EventStorage.Storage
             StorageService = storageService;
         }
 
-        public EventDto GetEvent(Id<EventDto> id)
+        public T GetWithUpstream<T>(Id<T> id) where T: IHasId<T>
         {
-            var ev = StorageService.Get(id);
-            if (ev == null)
-                ev = upstreamDataRepository.Get(id);
+            var ev = StorageService.Get(id) ?? upstreamDataRepository.Get(id);
             return ev;
         }
-
-        public List<SessionDto> ListSessions(Id<EventDto> id)
+        
+        public IEnumerable<SessionDto> ListSessions(Id<EventDto> id)
         {
-            var sessions = StorageService.List<SessionDto>(x => x.EventId == id);
-            sessions.AddRange(upstreamDataRepository.ListSessions(id));
-            return sessions;
+            return StorageService.List<SessionDto>(x => x.EventId == id)
+                .Concat(upstreamDataRepository.ListSessions(id))
+                .OrderBy(x => x.StartTime);
+        }
+        
+        public IEnumerable<TimingSessionDto> ListTimingSessions(Id<SessionDto> id)
+        {
+            return StorageService.List<TimingSessionDto>(x => x.SessionId == id)
+                .OrderBy(x => x.StartTime);
         }
         
         public IEnumerable<RiderClassRegistrationDto> GetRegistrations(Id<ClassDto> classId, Id<EventDto> eventId)
