# Logic/EventModel/Storage/IEventRepository.cs
@@ -1,6 +1,7 @@
 ﻿using System.Collections.Generic;
 using maxbl4.Race.Logic.EventModel.Storage.Identifier;
 using maxbl4.Race.Logic.EventStorage.Storage.Model;
+using maxbl4.Race.Logic.EventStorage.Storage.Traits;
 using maxbl4.Race.Logic.ServiceBase;
 
 namespace maxbl4.Race.Logic.EventStorage.Storage
@@ -10,7 +11,8 @@ namespace maxbl4.Race.Logic.EventStorage.Storage
         IEnumerable<RiderClassRegistrationDto> GetRegistrations(Id<ClassDto> classId, Id<EventDto> eventId);
         List<RiderClassRegistrationDto> GetRegistrations(Id<SessionDto> sessionId);
         Dictionary<string, List<Id<RiderClassRegistrationDto>>> GetRiderIdentifiers(Id<SessionDto> sessionId);
-        EventDto GetEvent(Id<EventDto> id);
-        List<SessionDto> ListSessions(Id<EventDto> id);
+        T GetWithUpstream<T>(Id<T> id) where T : IHasId<T>;
+        IEnumerable<SessionDto> ListSessions(Id<EventDto> id);
+        IEnumerable<TimingSessionDto> ListTimingSessions(Id<SessionDto> id);
     }
 }
